se bloquean los botones de borrado para los controles a nivel de consecuencia , se agrega logo Mdr, se elimina dashboard en la pantalla de inicio para colocarlo a nivel de detalle de cada item

--- a/src/app/componentes/rkmain/dashboard/dashboard.component.scss
+++ b/src/app/componentes/rkmain/dashboard/dashboard.component.scss
@@ -213,3 +213,11 @@
         transform: rotate(360deg);
     }
 }
+
+body {
+    background-image: url('assets/images/Mdr.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
