--- a/src/app/componentes/rkmain/rkmain.component.html
+++ b/src/app/componentes/rkmain/rkmain.component.html
@@ -523,7 +523,25 @@
 
         </div>
         <!--Dashboard-->
-        <div class="col-xl-8 " id="refrescar">
+        <!-- <div [ngClass]="showDashboard ? 'col-xl-8' : 'col-xl-8 sinFondo'" id="refrescar">
+
+            <router-outlet></router-outlet>
+        </div> -->
+        <div class="col-xl-8" id="refrescar">
+            <div class="box box-default" *ngIf="showDashboard === true">
+                <div class="row">
+                    <div *ngIf="showDashboard === true && !sololectura" class="col-xl-2"></div>
+                    <div *ngIf="showDashboard === true && !sololectura" class="col-xl-2"></div>
+                    <div *ngIf="showDashboard === true && !sololectura" class="col-xl-4 text-center">
+
+                        <img src="assets/images/Mdr.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div style="display: block;" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+                    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [plugins]="barChartPlugins" [colors]="chartColors" [chartType]="barChartType">
+                 </canvas>
+                </div>
+            </div>
 
             <router-outlet></router-outlet>
         </div>
