--- a/src/app/componentes/rkmain/rka/rka.component.html
+++ b/src/app/componentes/rkmain/rka/rka.component.html
@@ -1,6 +1,6 @@
 <h6 class="article-title">
     Area
-    <button *ngIf="areaModel.areaStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(areaModel.key,areaModel.areaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="areaModel.areaStatusId !=='008' && areaModel.CanAdd ==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(areaModel.key,areaModel.areaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
 
 </h6>
 <!-- <p>{{areaModel.areaStatusId}}</p> -->
