--- a/src/app/componentes/rkmain/rkc/rkc.component.html
+++ b/src/app/componentes/rkmain/rkc/rkc.component.html
@@ -1,6 +1,6 @@
 <h6 class="article-title">
     Area > Proceso > Subproceso > Actividad
-    <button *ngIf="actividadModel.actividadStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(actividadModel.key,actividadModel.actividadStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="actividadModel.actividadStatusId !=='008' &&actividadModel.CanAdd=== 'true'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(actividadModel.key,actividadModel.actividadStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
 
 </h6>
 
