--- a/src/app/componentes/rkmain/rkmain.component.scss
+++ b/src/app/componentes/rkmain/rkmain.component.scss
@@ -70,6 +70,17 @@
       background: white;
       height: 834px;
       border: 0.3px solid #175641;
+      // background-image: url('assets/images/Mdr.png');
+      // background-repeat: no-repeat;
+      background-size: cover;
+  }
+  
+  .sinFondo {
+      padding-left: 5px;
+      padding-right: 10px;
+      background: white !important;
+      height: 834px;
+      border: 0.3px solid #175641;
   }
   
   .pasos {
