--- a/src/app/componentes/rkmain/rkp/rkp.component.html
+++ b/src/app/componentes/rkmain/rkp/rkp.component.html
@@ -1,6 +1,6 @@
 <h6 class="article-title">
     Area > Proceso
-    <button *ngIf="procesoModel.procesoStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(procesoModel.key,procesoModel.procesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="procesoModel.procesoStatusId !=='008' && procesoModel.CanAdd " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(procesoModel.key,procesoModel.procesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
 
 </h6>
 
