--- a/src/app/componentes/rkmain/rkr/rkr.component.html
+++ b/src/app/componentes/rkmain/rkr/rkr.component.html
@@ -1,5 +1,5 @@
 <h6 class="article-title">Area > Proceso > Subproceso > Actividad > Tarea > Dimension > Riesgo
-    <button *ngIf="riesgoModel.riesgoStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(riesgoModel.key,riesgoModel.riesgoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="riesgoModel.riesgoStatusId !=='008' && riesgoModel.CanAdd === 'true'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(riesgoModel.key,riesgoModel.riesgoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
 
 </h6>
 
