--- a/src/app/componentes/rkmain/rks/rks.component.html
+++ b/src/app/componentes/rkmain/rks/rks.component.html
@@ -1,6 +1,6 @@
 <h6 class="article-title">
     Area > Proceso > Subproceso
-    <button *ngIf="subprocesoModel.subprocesoStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="subprocesoModel.subprocesoStatusId !=='008' && subprocesoModel.CanAdd==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
 
 </h6>
 
