--- a/src/app/componentes/rkmain/rkr/rkr.component.html
+++ b/src/app/componentes/rkmain/rkr/rkr.component.html
@@ -209,7 +209,7 @@
                         <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Puro</b></th>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Residual</b></th>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Puro</b></th>
-                        <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Residual"</b></th>
+                        <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Residual</b></th>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Puro</b></th>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico"><b>Residual</b></th>
                     </tr>
