--- a/src/app/componentes/rkmain/rkp/rkp.component.html
+++ b/src/app/componentes/rkmain/rkp/rkp.component.html
@@ -105,8 +105,8 @@
                     <tr *ngFor="let item of subprocesosList">
                         <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="001"  && item.pendingDelete ==="Y"|| item.estado ==="002" && item.pendingDelete ==="Y"|| item.estado ==="003"  && item.pendingDelete ==="Y"|| item.estado ==="006" && item.pendingDelete ==="Y"'
                             class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (*)</a></td>
-                        <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="004" && item.pendingDelete' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (**)</a></td>
-                        <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="007" && item.pendingDelete' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (***)</a></td>
+                        <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="004" && item.pendingDelete ==="Y"  ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (**)</a></td>
+                        <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="007" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (***)</a></td>
 
                         <td title="Ítem pendiente por enviar a validar." *ngIf=' item.estado ==="001" && item.pendingDelete ==="N" || item.estado ==="002" && item.pendingDelete ==="N" || item.estado ==="003" && item.pendingDelete ==="N" || item.estado ==="006" && item.pendingDelete ==="N"'
                             class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (*)</a></td>
