--- a/src/app/componentes/rkmain/rkpend/rkpend.component.scss
+++ b/src/app/componentes/rkmain/rkpend/rkpend.component.scss
@@ -63,6 +63,10 @@
     left: 150px;
 }
 
+#filtro {
+    min-width: 200px;
+}
+
 // .cebra thead th {
 //     position: sticky;
 //     top: 0;
@@ -73,7 +77,7 @@
     min-width: 200px;
     padding: 0.5rem;
     text-align: left;
-    cursor:text;
+    cursor: text;
 }
 
 .cebra th:last-child,
