se añade funcionalidad de recorda usuario del login,se elimina el logo de la matriz en la pantalla principal

--- a/src/app/componentes/rkmain/rkmain.component.html
+++ b/src/app/componentes/rkmain/rkmain.component.html
@@ -528,25 +528,25 @@
             <router-outlet></router-outlet>
         </div> -->
         <div class="col-xl-8" id="refrescar">
-            <div *ngIf="showDashboard === true">
+            <!-- <div *ngIf="showDashboard === true">
                 <div class="row">
-                    <div *ngIf="showDashboard === true && !sololectura" class="col-xl-2"></div>
-                    <div *ngIf="showDashboard === true && !sololectura" class="col-xl-2"></div>
-                    <div *ngIf="showDashboard === true && !sololectura" class="col-xl-4 text-center">
+                    <div *ngIf="showDashboard === true " class="col-xl-2"></div>
+                    <div *ngIf="showDashboard === true " class="col-xl-2"></div>
+                    <div *ngIf="showDashboard === true " class="col-xl-4 text-center">
 
                         <img src="assets/images/Mdr.png" alt="" class="img-fluid">
                     </div>
-                </div>
-                <!-- <br>
+                </div> -->
+            <!-- <br>
                 <div>
 
                     <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [plugins]="barChartPlugins" [colors]="chartColors" [chartType]="barChartType">
                      </canvas>
                 </div> -->
 
-            </div>
-
+            <!-- </div> -->
             <router-outlet></router-outlet>
+
         </div>
 
 
